# HB-Biogas-Telegram-Bot

./: .env.example  .gitignore  AGENTS.md  API_IMPROVEMENTS_SUMMARY.md  API_VALIDATION_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_MULTITENANT.md  BEFORE_AND_AFTER.md  BOT_COMMANDS.md  CASE_STATUS_UPDATES_BRAINSTORM.md  COMPLAINT_CASES_MINI_APP_GUIDE.md  COMPLAINT_MANAGEMENT_REGISTER_SETUP.md  CONFIDENCE_CALCULATION_UPDATE.md  Copy of JBL COMPLAINT MANAGEMENT REGISTER.xlsx  DATA_QUALITY_FIXES.md  DELIVERY_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  DOCUMENTATION_INDEX.md  FCA_SAMPLE_ANALYSIS.md  FCA_STANDARD_TEMPLATE_GUIDE.md  GOOGLE_SHEETS_VALIDATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  INDEX.md  JBL_File_Naming_Policy_v1.0.docx  MESSAGE_PROCESSING_GUIDE.md  MULTI_GROUP_WORKFLOW_CONFIGURATION.md  ORDER APPROVAL APRIL 2026.xlsx  ORDER APPROVAL REDESIGNED.xlsx  ORDER_APPROVAL_APPS_SCRIPT.md  ORDER_APPROVAL_MEDIA_NAMING.md  ORDER_APPROVAL_RENDER_DEPLOYMENT.md  Order_Approval_Form_V1.xlsx  PRODUCT.md  PRODUCTION_ARCHITECTURE.md  PRODUCTION_RUNBOOK.md  PROJECT_SUMMARY.md  (+37 more)
WhatsApp Chat with Jawabu-HomeBiogas/: WhatsApp Chat with Jawabu-HomeBiogas.txt
config/: settings.py  urls.py  wsgi.py
core/: admin.py  admin_dashboard.py  admin_utils.py  apps.py  compat.py  models.py  production.py  test_data_quality_simple.py  tests.py  tests_admin_monitoring.py  tests_complaint_cases.py  tests_data_quality.py  tests_group_reset.py  tests_miniapp_frontend.py  tests_order_approval.py  tests_payment_documents.py  (+7 more)
(+162 files in other folders)
